# pacmanconf.rs

./: Cargo.toml  README.md
cini/: Cargo.toml
cini/src/: lib.rs
pacmanconf/: Cargo.toml
pacmanconf/src/: error.rs  lib.rs  options.rs  pacmanconf.rs
pacmanconf/tests/: mirrorlist  pacman.conf
