[package]
name = "cini"
version = "0.1.0"
authors = ["morganamilo <morganamilo@gmail.com>"]
edition = "2018"
description = "A small callback based library for parsing ini files"
homepage = "http://github.com/Morganamilo/pacmanconf.rs/cini"
repository = "http://github.com/Morganamilo/pacmanconf.rs"
documentation = "https://docs.rs/cini"
license = "GPL-3.0"
keywords = ["configuration", "config", "conf", "cfg", "ini"]
categories = ["parsing"]
