[package]
name = "cini"
version = "1.0.0"
authors = ["morganamilo <morganamilo@archlinux.org>"]
edition = "2018"
description = "A small callback based library for parsing ini files"
homepage = "https://github.com/Morganamilo/pacmanconf.rs"
repository = "https://github.com/Morganamilo/pacmanconf.rs"
documentation = "https://docs.rs/cini"
license = "GPL-3.0"
keywords = ["configuration", "config", "conf", "cfg", "ini"]
categories = ["parsing"]
