[package]
name = "pacmanconf"
version = "0.1.0"
authors = ["morganamilo <morganamilo@gmail.com>"]
edition = "2018"
description = "A pacman-conf wrapper library for parsing pacman config files"
homepage = "http://github.com/Morganamilo/pacmanconf.rs/pacmanconf"
repository = "http://github.com/Morganamilo/pacmanconf.rs"
documentation = "https://docs.rs/cini"
license = "GPL-3.0"
keywords = ["pacman", "conf", "pacman-conf", "arch", "archlinux"]
categories = ["parser-implementations"]

[dependencies]
cini = "0.1"
