[package]
name = "pacmanconf"
version = "3.0.0"
authors = ["morganamilo <morganamilo@archlinux.org>"]
edition = "2018"
description = "A pacman-conf wrapper library for parsing pacman config files"
homepage = "http://github.com/Morganamilo/pacmanconf.rs/pacmanconf"
repository = "http://github.com/Morganamilo/pacmanconf.rs"
documentation = "https://docs.rs/pacmanconf"
license = "GPL-3.0"
keywords = ["pacman", "conf", "pacman-conf", "arch", "archlinux"]
categories = ["parser-implementations"]

[dependencies]
cini = "1.0.0"
